
	* Drop from repository generated files config.h.in,
	libtinymail-camel/camel-lite/config.h.in and po/Makefile.in.in

	* Reimplemented gnome keyring password dialog to use
	just plain gtk and drop usage of GnomePasswordDialog
	which is deprecated (fix #590753).
	* Removed pending includes and dependencies on
	libgnomeui (in configure.ac too) (fix #590753).

2009-10-15  Carl Simonson <simonsonc@gmail.com>

	Committed by: Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-send-queue.h (_TnySendQueueIface): removed
	superfluous user_data argument in signal definitions

2009-10-14  Carl Simonson <simonsonc@gmail.com>

	Reviewed by: Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-account.c (tny_account_base_init):
	"connection-status-changed" second argument must be of
	TnyConnectionStatus enum type.
	* libtinymail/tny-combined-account.c
	(tny_combined_account_class_init): register the private in the
	class

2009-10-14  Javier Jardon  <javierjc1982@gmail.com>

	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>

	* Default behaviour is "automatic", so the NetworkManager is
	compiled only if you have the NetworkManager libraries
	(libnm-glib) in you system
	* libtinymailui-webkit/tny-webkit-msg-view.c: more gtk
	deprecated symbols removed
	* libtinymail-camel/tny-camel-common.c: remove glib
	deprecated symbols (fixes #589996).
	* libtinymail-camel/camel-lite/libedataserver/e-memory.c:
	removes dead code containing glib deprecated symbols
	(fix 2/2 #589996).
	* Removed dependency on libgnomeui in many places of
	tinymail (partial fix #590753).

2009-10-14  Sergio Villar Senin  <svillar@igalia.com>

	* camel/camel-folder-summary.c (message_info_load): added proper
	error checking for summary mmap'ed file
	* camel/providers/imap/camel-imap-folder.c
	(send_done_in_stop_idle): fixes a memory leak in a CamelException

2009-10-02  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/pop3/camel-pop3-store.c (wait_for_login_delay):